# SMADIMO_GP3

./: .gitignore  PipelineMemory.py  main.py  prompts.py  pyproject.toml  save_report_to_markdown.py
tools/: download_file.py  make_eda_tools.py  make_fe_tools.py  ml_models.py  ml_tools.py
