[project]
name = "smadimo-gp3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "langchain==1.2.15",
    "langchain-google-genai==4.2.2",
    "langchain-google-vertexai==3.2.2",
    "pandas==3.0.2",
    "python-dotenv>=1.2.2",
    "scikit-learn==1.8.0",
]
